# aeditor

projects/core/: CHANGES  FEATURES  INSTALL  README  README.ADMIN  README.CVS  TODO  USAGE
projects/core/ncurses/: cmdline.rb  frontend.rb  main.rb
projects/core/source/: ascii.rb  buffer.rb  buffer_file.rb  buffer_line.rb  buffer_measure.rb  buffer_objects.rb  buffer_vertical.rb  cell.rb  cellarea.rb  commands_base.rb  commands_movement.rb  commands_others.rb  control.rb  convert.rb  edit.rb  edit_container.rb  exceptions.rb  global.rb  history.rb  line_objects.rb  log.rb  misc.rb  render.rb  view.rb  view_horizontal.rb
projects/core/test/: common.rb  fake_setup.rb  test_all.rb  test_buffer.rb  test_buffer_file.rb  test_buffer_line.rb  test_buffer_objects.rb  test_buffer_vertical.rb  test_cmdline.rb  test_commands_movement.rb  test_commands_others.rb  test_convert.rb  test_edit.rb  test_edit_container.rb  test_history.rb  test_line_objects.rb  test_measure.rb  test_misc.rb  test_render.rb  test_view.rb  test_view_horizontal.rb
projects/core/tools/: aeditor  build_tarball.rb  test_build_tarball.rb  upload_tarball.rb
projects/documents/devl_manual/: CLIPS  Rakefile  about.xml  backend.xml  custom.xml  frontend.xml  header.xml  main.xml  overview.xml  regexp.xml  regexp_repeat1.dia  regexp_repeat2.dia  regexp_repeat3.dia  regexp_syntax_reference.rb  style.css  todo.xml
projects/documents/docbook_minimal/: Makefile  catalog.xml  header.xml  install.xml  main.xml  overview.xml  problems.xml  setup.xml  skeleton.xml
projects/documents/homepage/: Makefile  TODO  about.html  faq.html  freebsd.html  idea.html  index.html  linkpanel.html  resources.html  shots.html  status.html  stories.html  (+1 more)
projects/dotfiles_neoneye/: dot_Xdefaults
projects/experimental/ruby_cplusplus/skeleton/: ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.in
projects/experimental/ruby_cplusplus/skeleton/source/: Makefile.am  example_bridge_ruby.cpp  example_bridge_ruby.h  example_bridge_ruby_wrap.i  library.cpp  library.h  main.cpp  rubycpp.cpp  rubycpp.h  test.rb  wrap.sh
projects/iterator/: CHANGES  README  TODO
projects/regexp_engine/: CHANGES  FEATURES  INSTALL  QUESTIONS  README  STORIES  TODO  proj.tmproj  regexp.rb
(+299 files in other folders)
